--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -62,7 +62,14 @@
           </a>
           <hr class="navbar-divider">
           <div class="navbar-item">
-            <div>version <p class="has-text-info is-size-6-desktop">{{ site.version }}</p></div>
+            <div>
+              <p class="has-text-info is-size-6-desktop"><strong>{{ site.version }}</strong></p>
+              {{#unless site.deprecated}}
+                <small>
+                  <a class="view-all-versions" href="/versions">View all versions</a>
+                </small>
+              {{/unless}}
+            </div>
           </div>
         </div>
       </div>
