--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -524,242 +524,242 @@ table th {
 }
 
 .is-size-1 {
-  font-size: 3rem;
+  font-size: 3rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-1-mobile {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-1-tablet {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-1-touch {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-1-desktop {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-1-widescreen {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-1-fullhd {
-    font-size: 3rem;
+    font-size: 3rem !important;
   }
 }
 
 .is-size-2 {
-  font-size: 2.5rem;
+  font-size: 2.5rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-2-mobile {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-2-tablet {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-2-touch {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-2-desktop {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-2-widescreen {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-2-fullhd {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
   }
 }
 
 .is-size-3 {
-  font-size: 2rem;
+  font-size: 2rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-3-mobile {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-3-tablet {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-3-touch {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-3-desktop {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-3-widescreen {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-3-fullhd {
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
 .is-size-4 {
-  font-size: 1.5rem;
+  font-size: 1.5rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-4-mobile {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-4-tablet {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-4-touch {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-4-desktop {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-4-widescreen {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-4-fullhd {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
   }
 }
 
 .is-size-5 {
-  font-size: 1.25rem;
+  font-size: 1.25rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-5-mobile {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-5-tablet {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-5-touch {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-5-desktop {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-5-widescreen {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-5-fullhd {
-    font-size: 1.25rem;
+    font-size: 1.25rem !important;
   }
 }
 
 .is-size-6 {
-  font-size: 1rem;
+  font-size: 1rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .is-size-6-mobile {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .is-size-6-tablet {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .is-size-6-touch {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .is-size-6-desktop {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .is-size-6-widescreen {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .is-size-6-fullhd {
-    font-size: 1rem;
+    font-size: 1rem !important;
   }
 }
 
@@ -776,7 +776,7 @@ table th {
 }
 
 .has-text-white {
-  color: white;
+  color: white !important;
 }
 
 a.has-text-white:hover, a.has-text-white:focus {
@@ -784,7 +784,7 @@ a.has-text-white:hover, a.has-text-white:focus {
 }
 
 .has-text-black {
-  color: #0a0a0a;
+  color: #0a0a0a !important;
 }
 
 a.has-text-black:hover, a.has-text-black:focus {
@@ -792,7 +792,7 @@ a.has-text-black:hover, a.has-text-black:focus {
 }
 
 .has-text-light {
-  color: whitesmoke;
+  color: whitesmoke !important;
 }
 
 a.has-text-light:hover, a.has-text-light:focus {
@@ -800,7 +800,7 @@ a.has-text-light:hover, a.has-text-light:focus {
 }
 
 .has-text-dark {
-  color: #363636;
+  color: #363636 !important;
 }
 
 a.has-text-dark:hover, a.has-text-dark:focus {
@@ -808,7 +808,7 @@ a.has-text-dark:hover, a.has-text-dark:focus {
 }
 
 .has-text-primary {
-  color: #00d1b2;
+  color: #00d1b2 !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
@@ -816,7 +816,7 @@ a.has-text-primary:hover, a.has-text-primary:focus {
 }
 
 .has-text-info {
-  color: #3273dc;
+  color: #3273dc !important;
 }
 
 a.has-text-info:hover, a.has-text-info:focus {
@@ -824,7 +824,7 @@ a.has-text-info:hover, a.has-text-info:focus {
 }
 
 .has-text-success {
-  color: #23d160;
+  color: #23d160 !important;
 }
 
 a.has-text-success:hover, a.has-text-success:focus {
@@ -832,7 +832,7 @@ a.has-text-success:hover, a.has-text-success:focus {
 }
 
 .has-text-warning {
-  color: #ffdd57;
+  color: #ffdd57 !important;
 }
 
 a.has-text-warning:hover, a.has-text-warning:focus {
@@ -840,11 +840,47 @@ a.has-text-warning:hover, a.has-text-warning:focus {
 }
 
 .has-text-danger {
-  color: #ff3860;
+  color: #ff3860 !important;
 }
 
 a.has-text-danger:hover, a.has-text-danger:focus {
   color: #ff0537;
+}
+
+.has-text-black-bis {
+  color: #121212 !important;
+}
+
+.has-text-black-ter {
+  color: #242424 !important;
+}
+
+.has-text-grey-darker {
+  color: #363636 !important;
+}
+
+.has-text-grey-dark {
+  color: #4a4a4a !important;
+}
+
+.has-text-grey {
+  color: #7a7a7a !important;
+}
+
+.has-text-grey-light {
+  color: #b5b5b5 !important;
+}
+
+.has-text-grey-lighter {
+  color: #dbdbdb !important;
+}
+
+.has-text-white-ter {
+  color: whitesmoke !important;
+}
+
+.has-text-white-bis {
+  color: #fafafa !important;
 }
 
 .is-hidden {
@@ -2813,6 +2849,22 @@ input[type="submit"].button {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.field.is-grouped.is-grouped-multiline {
+  flex-wrap: wrap;
+}
+
+.field.is-grouped.is-grouped-multiline > .control:last-child, .field.is-grouped.is-grouped-multiline > .control:not(:last-child) {
+  margin-bottom: 0.75rem;
+}
+
+.field.is-grouped.is-grouped-multiline:last-child {
+  margin-bottom: -0.75rem;
+}
+
+.field.is-grouped.is-grouped-multiline:not(:last-child) {
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 769px), print {
@@ -9301,6 +9353,14 @@ html.route-index #carbon {
 
 .button.is-rss:active {
   background-color: #d54d0d;
+}
+
+.view-all-versions {
+  color: #7a7a7a;
+}
+
+.view-all-versions:hover {
+  text-decoration: underline;
 }
 
 .example,
