--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -20,3 +20,8 @@
     background-color: darken(#f26522, 5%)
   &:active
     background-color: darken(#f26522, 10%)
+
+.view-all-versions
+  color: $text-light
+  &:hover
+    text-decoration: underline
