--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -62,3 +62,17 @@ route: documentation
 </section>
 
 {{ content }}
+
+<section class="section">
+  <div class="container">
+    <p class="has-text-centered has-text-grey-light">
+      This page is <strong class="has-text-grey">open source</strong>.
+      Noticed a typo?
+      Or something unclear?
+      <a class="has-text-grey" href="https://github.com/jgthms/bulma/blob/master/docs/{{ page.path }}" style="border-bottom: 1px solid currentColor;">
+        Improve this page on GitHub
+      </a>
+    </p>
+  </div>
+</section>
+
