--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -961,6 +961,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   padding: 0 !important;
 }
 
+.is-radiusless {
+  border-radius: 0 !important;
+}
+
 .is-unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -7649,7 +7653,6 @@ label.panel-block:hover {
 }
 
 .section {
-  background-color: white;
   padding: 3rem 1.5rem;
 }
 
