--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -112,6 +112,8 @@ a.navbar-item,
   margin: 0.5rem 0
 
 +touch
+  .container
+    flex-direction: column
   .navbar-brand
     .navbar-item
       align-items: center
