--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -2,6 +2,8 @@ $box: $text !default
 $box-background: $white !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
+$box-border: 1px solid $grey-dark !default
+$box-padding: 1.25rem !default
 
 $box-link-hover-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $link
 $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
@@ -9,11 +11,12 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
 .box
   +block
   background-color: $box-background
+  border: $box-border
   border-radius: $box-radius
   box-shadow: $box-shadow
   color: $box
   display: block
-  padding: 1.25rem
+  padding: $box-padding
 
 a.box
   &:hover,
