Set a min-width to navbar-item

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -61,6 +61,9 @@ $navbar-divider-background: $border !default
   line-height: 1.5
   padding: 0.5rem 1rem
   position: relative
+  min-width: $navbar-height
+  .icon
+    width: 100%
 
 a.navbar-item,
 .navbar-link
