--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -2,6 +2,7 @@ $box: $text !default
 $box-background: $white !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
+$box-padding: 1.25rem !default
 
 $box-link-hover-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $link
 $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
@@ -13,7 +14,7 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
   box-shadow: $box-shadow
   color: $box
   display: block
-  padding: 1.25rem
+  padding: $box-padding
 
 a.box
   &:hover,
