--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -44,7 +44,7 @@ $input-radius:              $radius !default
 .input,
 .textarea
   +input
-  box-shadow: $input-shadow:
+  box-shadow: $input-shadow
   max-width: 100%
   width: 100%
   &[type="search"]
