--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -25,3 +25,11 @@
   color: $text-light
   &:hover
     text-decoration: underline
+
+.feature-title
+  color: $text-light
+  a
+    border-bottom: 1px solid transparent
+    color: $text-strong
+    &:hover
+      border-bottom-color: $primary
