--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4163,7 +4163,7 @@ a.dropdown-item.is-active {
 
 .menu-list a:hover {
   background-color: whitesmoke;
-  color: #00d1b2;
+  color: #363636;
 }
 
 .menu-list a.is-active {
@@ -8348,6 +8348,19 @@ html.route-index #carbon {
   text-decoration: underline;
 }
 
+.feature-title {
+  color: #7a7a7a;
+}
+
+.feature-title a {
+  border-bottom: 1px solid transparent;
+  color: #363636;
+}
+
+.feature-title a:hover {
+  border-bottom-color: #00d1b2;
+}
+
 .example,
 .structure {
   border: 1px solid #ffdd57;
@@ -8702,7 +8715,6 @@ html.route-index .title.is-2 {
 
 html.route-index .title.is-2 a {
   color: #242424;
-  padding-left: 48px;
   position: relative;
 }
 
@@ -8711,9 +8723,14 @@ html.route-index .title.is-2 a:hover {
 }
 
 html.route-index .title.is-2 .icon.is-medium {
-  left: 8px;
+  left: -80px;
+  opacity: 0.1;
   position: absolute;
   top: 10px;
+}
+
+html.route-index .title.is-2 .icon.is-medium .fa {
+  font-size: 56px;
 }
 
 html.route-index .hero .title.is-2 a {
