Add progress bar

--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -108,6 +108,10 @@
 </div>
 {% endcapture %}
 
+{% capture progress %}
+<progress class="progress is-primary" value="30" max="100">30%</progress>
+{% endcapture %}
+
 {% capture tags %}
 <span class="tag is-black">Black</span>
 <span class="tag is-dark">Dark</span>
@@ -121,7 +125,7 @@
 {% endcapture %}
 
 {% capture cards %}
-<div class="columns">
+<div class="columns is-mobile">
   <div class="column is-half">
     <div class="card">
       <div class="card-image">
@@ -482,6 +486,19 @@
           </div>
           <div class="column is-9">
             {{ notification }}
+          </div>
+        </div>
+
+        <div class="columns">
+          <div class="column is-3">
+            <h4 class="subtitle is-4 feature-title">
+              <a href="{{ site.url }}/documentation/elements/progress/">
+                Progress bar
+              </a>
+            </h4>
+          </div>
+          <div class="column is-9">
+            {{ progress }}
           </div>
         </div>
 
