Fix index images

--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -130,14 +130,14 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="http://localhost:4000/images/placeholders/1280x960.png" alt="Image">
+          <img src="{{site.url}}/images/placeholders/1280x960.png" alt="Image">
         </figure>
       </div>
       <div class="card-content">
         <div class="media">
           <div class="media-left">
             <figure class="image is-48x48">
-              <img src="http://localhost:4000/images/placeholders/96x96.png" alt="Image">
+              <img src="{{site.url}}/images/placeholders/96x96.png" alt="Image">
             </figure>
           </div>
           <div class="media-content">
