Updated buttons to always use a consistent radius

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -19,7 +19,7 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
 
 // The button sizes use mixins so they can be used at different breakpoints
 =button-small
-  border-radius: $radius-small
+  // border-radius: $radius-small
   font-size: $size-small
 =button-medium
   font-size: $size-medium
