Fixed hardcoded localhost image url

--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -362,7 +362,7 @@
 <article class="media">
   <figure class="media-left">
     <p class="image is-64x64">
-      <img src="http://localhost:4000/images/placeholders/128x128.png">
+      <img src="{{ site.url }}/images/placeholders/128x128.png">
     </p>
   </figure>
   <div class="media-content">
