--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -7,122 +7,122 @@ doc-subtab: breadcrumb
 {% include subnav-components.html %}
 
 {% capture breadcrumb_example %}
-<nav class="breadcrumb">
+<nav class="breadcrumb" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_centered_example %}
-<nav class="breadcrumb is-centered">
+<nav class="breadcrumb is-centered" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_right_example %}
-<nav class="breadcrumb is-right">
+<nav class="breadcrumb is-right" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_icons_example %}
-<nav class="breadcrumb">
+<nav class="breadcrumb" aria-label="breadcrumbs">
   <ul>
-    <li><a><span class="icon is-small"><i class="fa fa-home"></i></span><span>Bulma</span></a></li>
-    <li><a><span class="icon is-small"><i class="fa fa-book"></i></span><span>Documentation</span></a></li>
-    <li><a><span class="icon is-small"><i class="fa fa-puzzle-piece"></i></span><span>Components</span></a></li>
-    <li class="is-active"><a><span class="icon is-small"><i class="fa fa-thumbs-up"></i></span><span>Breadcrumb</span></a></li>
+    <li><a href="#"><span class="icon is-small"><i class="fa fa-home"></i></span><span>Bulma</span></a></li>
+    <li><a href="#"><span class="icon is-small"><i class="fa fa-book"></i></span><span>Documentation</span></a></li>
+    <li><a href="#"><span class="icon is-small"><i class="fa fa-puzzle-piece"></i></span><span>Components</span></a></li>
+    <li class="is-active"><a href="#" aria-current="page"><span class="icon is-small"><i class="fa fa-thumbs-up" aria-hidden="true"></i></span><span>Breadcrumb</span></a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_small_example %}
-<nav class="breadcrumb is-small">
+<nav class="breadcrumb is-small" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_medium_example %}
-<nav class="breadcrumb is-medium">
+<nav class="breadcrumb is-medium" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_large_example %}
-<nav class="breadcrumb is-large">
+<nav class="breadcrumb is-large" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_arrow_example %}
-<nav class="breadcrumb has-arrow-separator">
+<nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_bullet_example %}
-<nav class="breadcrumb has-bullet-separator">
+<nav class="breadcrumb has-bullet-separator" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_dot_example %}
-<nav class="breadcrumb has-dot-separator">
+<nav class="breadcrumb has-dot-separator" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
 
 {% capture breadcrumb_succeeds_example %}
-<nav class="breadcrumb has-succeeds-separator">
+<nav class="breadcrumb has-succeeds-separator" aria-label="breadcrumbs">
   <ul>
-    <li><a>Bulma</a></li>
-    <li><a>Documentation</a></li>
-    <li><a>Components</a></li>
-    <li class="is-active"><a>Breadcrumb</a></li>
+    <li><a href="#">Bulma</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Components</a></li>
+    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
 {% endcapture %}
