--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,5 +1,5 @@
-$box: $text !default
-$box-background: $white !default
+$box-color: $text !default
+$box-background-color: $white !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
 $box-padding: 1.25rem !default
@@ -9,10 +9,10 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
 
 .box
   +block
-  background-color: $box-background
+  background-color: $box-background-color
   border-radius: $box-radius
   box-shadow: $box-shadow
-  color: $box
+  color: $box-color
   display: block
   padding: $box-padding
 
